[gd_scene load_steps=13 format=2]

[ext_resource path="res://scenes/objects/Floor.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/objects/Dinosaur.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/Spawners.gd" type="Script" id=3]
[ext_resource path="res://assets/fonts/Roboto-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://scripts/GoalLine.gd" type="Script" id=5]
[ext_resource path="res://scripts/UI.gd" type="Script" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32.5, 10 )

[sub_resource type="SegmentShape2D" id=4]
b = Vector2( 0, 225 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 4 )

[sub_resource type="Theme" id=3]
default_font = SubResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = ExtResource( 4 )

[sub_resource type="Theme" id=6]
default_font = SubResource( 5 )

[node name="Main" type="Node"]

[node name="Floor" parent="." instance=ExtResource( 1 )]
position = Vector2( 1, 968 )

[node name="StaticBody2D" type="StaticBody2D" parent="Floor"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor/StaticBody2D"]
position = Vector2( 206, 60 )
shape = SubResource( 1 )

[node name="Dinosaur" parent="." instance=ExtResource( 2 )]
position = Vector2( 207, 952 )

[node name="GoalLine" type="Area2D" parent="."]
position = Vector2( 104, 853 )
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="GoalLine"]
shape = SubResource( 4 )

[node name="Spawners" type="Node" parent="."]
script = ExtResource( 3 )

[node name="BirdSpawner" type="Node2D" parent="Spawners"]
position = Vector2( 1933, 807 )

[node name="ObstaclesSpawner" type="Node2D" parent="Spawners"]
position = Vector2( 1933, 986 )

[node name="Timer" type="Timer" parent="Spawners"]
wait_time = 1.5

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="ScoreLabel" type="Label" parent="UI"]
anchor_left = 0.934
anchor_top = 0.014
anchor_right = 0.991
anchor_bottom = 0.082
margin_left = 0.719971
margin_top = -2.12
margin_right = -0.720093
margin_bottom = 0.439995
theme = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "999"
align = 1
valign = 1

[node name="StartGame" type="Label" parent="UI"]
anchor_top = 0.494
anchor_right = 1.0
anchor_bottom = 0.529
margin_top = -0.52002
margin_bottom = -24.3201
theme = SubResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Press any key to start"
align = 1
valign = 1

[connection signal="area_entered" from="GoalLine" to="GoalLine" method="_on_GoalLine_area_entered"]
[connection signal="timeout" from="Spawners/Timer" to="Spawners" method="_on_Timer_timeout"]
[connection signal="start_game" from="UI" to="Spawners" method="_on_UI_start_game"]
